// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create commit: card-state has card-input 1`] = `
Object {
  "cardStates": Array [
    Object {
      "body": Object {
        "changes": Array [],
        "prevStateId": null,
        "sourceCardId": null,
        "value": Array [
          Object {
            "children": Array [],
            "cid": "0",
            "data": Object {
              "head": "000",
            },
            "index": 0,
            "parentCid": "TEMP_ROOT_CID",
          },
        ],
      },
      "card": Object {
        "linkId": null,
        "meta": Object {},
        "sym": Object {
          "symbol": "$AA",
          "type": "TICKER",
        },
      },
      "cardId": "1",
      "cid": "$AA",
      "commitId": "4",
      "prevId": null,
      "userId": "testuser0",
    },
  ],
  "userId": "testuser0",
}
`;

exports[`create commit: card-state has card-input 2`] = `
Object {
  "cardStates": Array [
    Object {
      "body": Object {
        "changes": Array [],
        "prevStateId": "2",
        "sourceCardId": null,
        "value": Array [
          Object {
            "children": Array [],
            "cid": "0",
            "data": Object {
              "head": "000",
            },
            "index": 0,
            "parentCid": "TEMP_ROOT_CID",
          },
        ],
      },
      "card": Object {
        "linkId": null,
        "meta": Object {},
        "sym": Object {
          "symbol": "$AA",
          "type": "TICKER",
        },
      },
      "cardId": "1",
      "cid": "$AA",
      "commitId": "7",
      "prevId": "2",
      "userId": "testuser0",
    },
  ],
  "userId": "testuser0",
}
`;

exports[`create commit: multi card-state 1`] = `
Object {
  "cardStates": Array [
    Object {
      "body": Object {
        "changes": Array [],
        "prevStateId": null,
        "sourceCardId": "1",
        "value": Array [
          Object {
            "children": Array [],
            "cid": "0",
            "data": Object {
              "head": "000",
            },
            "index": 0,
            "parentCid": "TEMP_ROOT_CID",
          },
        ],
      },
      "card": Object {
        "linkId": null,
        "meta": Object {},
        "sym": Object {
          "symbol": "$BB",
          "type": "TICKER",
        },
      },
      "cardId": "8",
      "cid": "$BB",
      "commitId": "12",
      "prevId": null,
      "userId": "testuser0",
    },
    Object {
      "body": Object {
        "changes": Array [],
        "prevStateId": null,
        "sourceCardId": "1",
        "value": Array [
          Object {
            "children": Array [],
            "cid": "0",
            "data": Object {
              "head": "000",
            },
            "index": 0,
            "parentCid": "TEMP_ROOT_CID",
          },
        ],
      },
      "card": Object {
        "linkId": null,
        "meta": Object {},
        "sym": Object {
          "symbol": "$CC",
          "type": "TICKER",
        },
      },
      "cardId": "9",
      "cid": "$CC",
      "commitId": "12",
      "prevId": null,
      "userId": "testuser0",
    },
  ],
  "userId": "testuser0",
}
`;
